Fix Sidebar display and changes name per category

--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -319,5 +319,29 @@ $('.customdropdown .customdropdown-menu li').click(function () {
     $(this).parents('.customdropdown').find('span').text($(this).text());
     $(this).parents('.customdropdown').find('input').attr('value', $(this).attr('id'));
 });
+
+$(document).ready(function () {
+  let isSidebarOpen = localStorage.getItem('isSidebarOpen') === 'true';
+
+  function updateSidebarState() {
+    $("body").toggleClass("sidebar-toggled", isSidebarOpen);
+    $(".sidebar").toggleClass("toggled", isSidebarOpen);
+
+    if (isSidebarOpen) {
+      $('.sidebar .collapse').collapse('hide');
+    }
+  }
+
+  updateSidebarState();
+
+  $("#sidebarToggle, #sidebarToggleTop").on('click', function (e) {
+    isSidebarOpen = !isSidebarOpen;
+
+    localStorage.setItem('isSidebarOpen', isSidebarOpen);
+
+    updateSidebarState();
+  });
+});
+
 </script>
 
