--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -12,19 +12,14 @@
     <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item">
+    <li class="nav-item mt-2">
         <a class="nav-link" href="/index">
-            <i class="fas fa-fw fa-tachometer-alt icon-color"></i>
+            <i class="fas fa-chart-bar"></i>
             <span class="text-white">Dashboard</span></a>
     </li>
 
     <!-- Divider -->
     <hr class="sidebar-divider">
-
-    <!-- Heading -->
-    <div class="sidebar-heading text-white fw700">
-        Interface
-    </div>
 
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
@@ -78,7 +73,7 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTransactions"
             aria-expanded="true" aria-controls="collapseTransactions">
             <i class="fas fa-hand-holding-usd"></i>
-            <span class="text-white">Transanctions</span>
+            <span class="text-white">Sales Management</span>
         </a>
         <div id="collapseTransactions" class="collapse" aria-labelledby="headingTransactions"
             data-parent="#accordionSidebar">
@@ -111,7 +106,7 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInventory"
             aria-expanded="true" aria-controls="collapseInventory">
             <i class="fas fa-boxes"></i>
-            <span class="text-white">Inventory</span>
+            <span class="text-white">Inventory Management</span>
         </a>
         <div id="collapseInventory" class="collapse" aria-labelledby="headingTransactions"
             data-parent="#accordionSidebar">
@@ -140,7 +135,7 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseRequest"
             aria-expanded="true" aria-controls="collapseRequest">
             <i class="fas fa-handshake"></i>
-            <span class="text-white">Request</span>
+            <span class="text-white">Procurement Management</span>
         </a>
         <div id="collapseRequest" class="collapse" aria-labelledby="headingTransactions"
             data-parent="#accordionSidebar">
@@ -161,7 +156,7 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseProduction"
             aria-expanded="true" aria-controls="collapseProduction">
             <i class="fab fa-product-hunt"></i>
-            <span class="text-white">Production</span>
+            <span class="text-white">Production Management</span>
         </a>
         <div id="collapseProduction" class="collapse" aria-labelledby="headingTransactions"
             data-parent="#accordionSidebar">
