Added Promo, Discount API. Revised load shiftreport and added approve API

--- a/views/products/productsscripts.ejs
+++ b/views/products/productsscripts.ejs
@@ -370,7 +370,7 @@ $(document).ready(function () {
     });
 
     $(document).on('click', '#updateBtn', function () {
-        console.log(this.val() + "CLICKED");
+        // console.log(this.val() + "CLICKED");
         let productid = $('#productid').val();
         let description = $('#descriptionmodal').val();
         let productimage = base64StringModal;
