--- a/views/category/category.ejs
+++ b/views/category/category.ejs
@@ -1,115 +1,188 @@
 <!-- Modal -->
-<div class="modal fade " id="categoryModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header custom-bg">
-                <h5 class="modal-title" id="exampleModalLabel">Category</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+<div
+  class="modal fade"
+  id="categoryModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header custom-bg">
+        <h5 class="modal-title" id="exampleModalLabel">Category</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="custom-modal-body">
+        <div class="card shadow">
+          <div class="card-header py-2 header-bg">
+            <h6 class="m-0 font-weight-bold table-title">Update Category:</h6>
+          </div>
+          <div class="card-body">
+            <div class="row mb-2">
+              <div class="col-md-12">
+                <label class="form-label" for="mu_password"
+                  >Category Code</label
+                >
+                <input
+                  id="categorycode"
+                  name="categorycode"
+                  type="text"
+                  class="form-control"
+                  aria-label="fullname"
+                  aria-describedby="basic-addon1"
+                  disabled
+                />
+              </div>
             </div>
-            <div class="custom-modal-body">
-                <div class="card shadow">
-                    <div class="card-header py-2 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title">Update Category: </h6>
-                    </div>
-                    <div class="card-body">
-                        <div class="row mb-2">
-                            <div class="col-md-12">
-                                <label class="form-label" for="mu_password">Category Code</label>
-                                <input id="categorycode" name="categorycode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
-                            </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
-                                <label class="form-label" for="mu_password">Category Name</label>
-                                <input id="categorynamemodal" name="categorynamemodal" type="text" class="form-control" placeholder="Enter new category name" aria-label="fullname" aria-describedby="basic-addon1">        
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="row mb-2">
+              <div class="col-md-12">
+                <label class="form-label" for="mu_password"
+                  >Category Name</label
+                >
+                <input
+                  id="categorynamemodal"
+                  name="categorynamemodal"
+                  type="text"
+                  class="form-control"
+                  placeholder="Enter new category name"
+                  aria-label="fullname"
+                  aria-describedby="basic-addon1"
+                />
+              </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
-                <button type="button" id="updateBtn" class="btn btn-outline-inventory">Update</button>
-            </div>
+          </div>
         </div>
+      </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-outline-inventory"
+          data-dismiss="modal"
+        >
+          Close
+        </button>
+        <button type="button" id="updateBtn" class="btn btn-outline-inventory">
+          Update
+        </button>
+      </div>
     </div>
+  </div>
 </div>
 
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
-    <!-- Content Row -->
-    <div class="row mb-2">
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold">Category</h6>
-                </div>
-                <div class="card-body extend">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon2">Category</span>
-                                </div>
-                                <input id="categoryname" name="categoryname" type="text" class="form-control" placeholder="Enter Position Name" aria-label="categoryname" aria-describedby="basic-addon1">
-                            </div>
-                        </div>
-                        <div class="col-md-4 align mt-1">
-                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-50">
-                                <i class="fa fa-plus" aria-hidden="true"></i>
-                                Add
-                            </button>
-                        </div>
-                    </div>
-                </div>      
-            </div>
+  <!-- Content Row -->
+  <div class="row mb-2">
+    <div class="col-lg-12">
+      <div class="card">
+        <div class="card-header py-3 header-bg">
+          <h6 class="m-0 font-weight-bold">Category</h6>
         </div>
+        <div class="card-body extend">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="basic-addon2"
+                    >Category</span
+                  >
+                </div>
+                <input
+                  id="categoryname"
+                  name="categoryname"
+                  type="text"
+                  class="form-control"
+                  placeholder="Enter Position Name"
+                  aria-label="categoryname"
+                  aria-describedby="basic-addon1"
+                />
+              </div>
+            </div>
+            <div class="col-md-4 align mt-1">
+              <button
+                id="addBtn"
+                name="addBtn"
+                class="btn btn-sm btn-outline-inventory shadow-sm w-50"
+              >
+                <i class="fa fa-plus" aria-hidden="true"></i>
+                Add
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 
-<!-- DataTales Example -->
-<div class="card shadow mb-4 table-size">
+  <!-- DataTales Example -->
+  <div class="card shadow mb-4 table-size">
     <div class="progress progress-sm mb-2">
-        <div class="progress-bar" role="progressbar" style="width: 0%"
-            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+      <div
+        class="progress-bar"
+        role="progressbar"
+        style="width: 0%"
+        aria-valuenow="0"
+        aria-valuemin="0"
+        aria-valuemax="100"
+      ></div>
     </div>
     <div class="card-header py-3 header-bg">
-        <div class="row">
-            <div class="col-md-6">
-                <h6 class="mt-2 font-weight-bold table-title">Category Data:</h6>
-            </div>
-            <div class="col-md-6">
-                <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
-                        placeholder="Search for..." aria-label="Search"
-                        aria-describedby="basic-addon2" id="search-input">
-                    <div class="input-group-append">
-                        <button class="btn sis-btn-color" type="button" id="search-button">
-                            <i class="fas fa-search fa-sm"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h6 class="mt-2 font-weight-bold table-title">Category Data:</h6>
         </div>
+        <div class="col-md-6">
+          <div class="input-group">
+            <input
+              type="text"
+              class="form-control bg-light border-0 small"
+              placeholder="Search for..."
+              aria-label="Search"
+              aria-describedby="basic-addon2"
+              id="search-input"
+            />
+            <div class="input-group-append">
+              <button
+                class="btn sis-btn-color"
+                type="button"
+                id="search-button"
+              >
+                <i class="fas fa-search fa-sm"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered custom-mobile-table" id="category-dataTable" width="100%" cellspacing="10">
-                <thead class="table-header">
-                    <tr>
-                        <th class = "col-1">Category Code</th>
-                        <th class = "col-3">Category Name</th>
-                        <th class = "col-3">Created by</th>
-                        <th class = "col-2">Created date</th>
-                        <th class = "col-1">Status</th>
-                        <th class = "col-2">Action</th>               
-                    </tr>
-                </thead>          
-                <tbody>
-                </tbody>
-            </table>
-        </div>
-        
+      <div class="table-responsive scrollable-table-container">
+        <table
+          class="table table-bordered custom-mobile-table"
+          id="category-dataTable"
+          width="100%"
+          cellspacing="10"
+        >
+          <thead class="table-header">
+            <tr>
+              <th class="col-1">Category Code</th>
+              <th class="col-3">Category Name</th>
+              <th class="col-3">Created by</th>
+              <th class="col-2">Created date</th>
+              <th class="col-1">Status</th>
+              <th class="col-2">Action</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
     </div>
+  </div>
 </div>
