Fix bug on shift report table

--- a/views/salesdetails/salesdetailsscripts.ejs
+++ b/views/salesdetails/salesdetailsscripts.ejs
@@ -104,6 +104,7 @@
                         <td class="custom-mobile-align bmss-link" data-toggle="modal" data-target="#sales-details-modal" data-label="Detail ID">${item.detailid}</td>
                         <td class="custom-mobile-align responsive-wrap" data-label="Date">${item.date}</td>
                         <td class="custom-mobile-align" data-label="POS ID">${item.posid}</td>
+                        <td class="custom-mobile-align" data-label="POS ID">${item.branch}</td>
                         <td class="custom-mobile-align" data-label="Shift">${item.shift}</td>
                         <td class="custom-mobile-align" data-label="Payment Type">${item.paymenttype}</td>
                         <td class="responsive-wrap">${newDescription}</td>
