--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -122,6 +122,7 @@
                         <th class = "col-1">Details ID</th>
                         <th class = "col-2">Date</th>
                         <th class = "col-1">POS ID</th>
+                        <th class = "col-1">Branch ID</th>
                         <th class = "col-1">Shift</th>
                         <th class = "col-1">Payment Type</th>
                         <th class = "col-2">Description</th>
