Added Product Inventory Display and script (Load)

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -112,6 +112,9 @@
             data-parent="#accordionSidebar">
             <div class="bg-options py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Contents:</h6>
+                <a class="collapse-item" href="/productinventory">
+                    <span>Product Inventory</span>
+                </a>
                 <a class="collapse-item" href="/inventorycount">
                     <span>Inventory Counts</span>
                 </a>
