--- a/views/products/productsscripts.ejs
+++ b/views/products/productsscripts.ejs
@@ -148,6 +148,8 @@ $(document).ready(function () {
         let price = $('#price').val();
         let category = $('#category').val();
         let barcode = $('#barcode').val();
+        let quantity = $('#quantity').val();
+        let branchid = $('#branchlist').val();
         let productimage = base64String
 
         var message = "";
@@ -156,6 +158,8 @@ $(document).ready(function () {
         if (price == '') { message += 'Price, ' }
         if (category == '') { message += 'Category, ' }
         if (barcode == '') { message += 'Barcode, ' }
+        if (quantity == '') { message += 'Quantity, ' }
+        if (branchid == '') { message += 'Branch ID, ' }
 
         if (message != '') {
             warning('Required', `Please fill up ${message}`);
@@ -170,6 +174,8 @@ $(document).ready(function () {
                     barcode: barcode,
                     description: description,
                     productimage: productimage,
+                    quantity: quantity,
+                    branchid: branchid,
                 },
                 success: function (result) {
                     if (result.msg == 'success') {
@@ -313,7 +319,30 @@ $(document).ready(function () {
                 errormsg(err);
             }
         });
+
+        $.ajax({
+            type: 'GET',
+            url: '/branch/load',
+            success: function (result) {
+                var data = result.data;
+                console.log(data)
+                $.each(data, function (key, item) {
+                    if (item.status == "ACTIVE") {
+                        var options = new Option(item.branchname, item.branchid);
+                        $('#branchlist').append(options);
+                    }
+                });
+            },
+            error: function (err) {
+                errormsg(err);
+            }
+        });
     }
+
+    $(document).on('change', '#branchlist', function(){
+        let branchid = $(this).val();
+        console.log('Branch ID is: ' + branchid)
+    });
 
     $(document).on('click', '#activeBtn', function(){
         console.log(productid);
