Updated product inventory

--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -43,7 +43,7 @@
                         <tr>
                             <th>Inventory ID</th>
                             <th>Product</th>
-                            <th>Branch</th>
+                            <th>Branch ID</th>
                             <th>Quantity</th>
                         </tr>
                     </thead>
