--- a/views/branch/branchscripts.ejs
+++ b/views/branch/branchscripts.ejs
@@ -200,12 +200,12 @@
         })
 
         function populateBranchTable(data) {
-            const addBtn = $('#addBtn');
-            if (data.length === 1) {
-                addBtn.prop('disabled', true);
-            } else {
-                addBtn.prop('disabled', false);
-            }
+            // const addBtn = $('#addBtn');
+            // if (data.length === 1) {
+            //     addBtn.prop('disabled', true);
+            // } else {
+            //     addBtn.prop('disabled', false);
+            // }
             console.log(data);
             const tableBody = $('#branch-dataTable tbody');
             tableBody.empty();
