--- a/views/productinventory/productinventoryscripts.ejs
+++ b/views/productinventory/productinventoryscripts.ejs
@@ -105,13 +105,28 @@
                 tableBody.append(tr);
             } else {
                 data.forEach(item => {
-                    const tr = $('<tr>').append(
-                        $('<td>', { text: item.inventoryid, 'data-label': 'Inventory ID', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.productid, 'data-label': 'Product', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.branchid, 'data-label': 'Branch', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.quantity, 'data-label': 'Quantity', class: 'custom-mobile-align' }),
-                    );
-                    tableBody.append(tr);
+                    $.ajax({
+                        type: 'GET',
+                        url: '/products/getproductdetails',
+                        data: {
+                            productid: item.productid
+                        },
+                        success: function (result) {
+                            let data = result.data;
+                            let productname = data[0].description;
+                           
+                            const tr = $('<tr>').append(
+                                $('<td>', { text: item.inventoryid, 'data-label': 'Inventory ID', class: 'custom-mobile-align' }),
+                                $('<td>', { text: productname, 'data-label': 'Product', class: 'custom-mobile-align' }),
+                                $('<td>', { text: item.branchid, 'data-label': 'Branch ID', class: 'custom-mobile-align' }),
+                                $('<td>', { text: item.quantity, 'data-label': 'Quantity', class: 'custom-mobile-align' }),
+                            );
+                            tableBody.append(tr);
+                        },
+                        error: function (err) {
+                            errormsg(err);
+                        }
+                    })
                 });
             }
         }
