Added route for sales inventory history scripts (Load and save)

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -159,7 +159,7 @@
         <a class="collapse-item" href="/inventorycount">
           <span>Inventory Counts</span>
         </a>
-        <a class="collapse-item" href="#">
+        <a class="collapse-item" href="/inventoryhistory">
           <span>Inventory History</span>
         </a>
         <a class="collapse-item" href="#">
