Change name of inventoryhistory to salesinventoryhistory

--- a/views/salesinventoryhistory/salesinventoryhistoryscripts.ejs
+++ b/views/salesinventoryhistory/salesinventoryhistoryscripts.ejs
@@ -31,7 +31,7 @@
         $(".progress").slideDown();
 
         $.ajax({
-            url: '/inventoryhistory/load',
+            url: '/salesinventoryhistory/load',
             method: 'GET',
             dataType: 'json',
             xhrFields: {
