--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -159,8 +159,8 @@
         <a class="collapse-item" href="/inventorycount">
           <span>Inventory Counts</span>
         </a>
-        <a class="collapse-item" href="/inventoryhistory">
-          <span>Inventory History</span>
+        <a class="collapse-item" href="/salesinventoryhistory">
+          <span>Sales Inventory History</span>
         </a>
         <a class="collapse-item" href="#">
           <span>Stock Adjustment</span>
