--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -162,6 +162,9 @@
         <a class="collapse-item" href="/salesinventoryhistory">
           <span>Sales Inventory History</span>
         </a>
+        <a class="collapse-item" href="/inventoryhistory">
+          <span>Inventory History</span>
+        </a>
         <a class="collapse-item" href="#">
           <span>Stock Adjustment</span>
         </a>
