--- a/views/promo/promo.ejs
+++ b/views/promo/promo.ejs
@@ -311,6 +311,7 @@
               <th class="col-1">ID</th>
               <th class="col-2">Promo Name</th>
               <th class="col-3">Description</th>
+              <th class="col-1">DTI Permit</th>
               <th class="col-1">Condition</th>
               <th class="col-1">Start Date</th>
               <th class="col-1">End Date</th>
