--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="sticky-footer">
     <div class="container my-auto">
         <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Avesti Powered by <a class="bmss-link" href="https://www.5lsolutions.com/">5L Solutions</a></span>
+            <span>Copyright &copy; Avesti Powered by <a target="_blank" class="bmss-link" href="https://www.5lsolutions.com/">5L Solutions</a></span>
         </div>
     </div>
 </footer>
