Added Payment Module

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -58,20 +58,27 @@
         <a class="collapse-item" href="/position">
           <span>Position Type</span>
         </a>
-        <a class="collapse-item" href="/category">
-          <span>Category</span>
-        </a>
+ 
         <a class="collapse-item" href="/location">
           <span>Location</span>
-        </a>
-        <a class="collapse-item" href="/users">
-          <span>Users</span>
         </a>
         <a class="collapse-item" href="/employees">
           <span>Employees</span>
         </a>
-        <a class="collapse-item" href="/products">
-          <span>Products</span>
+
+        <hr class="sidebar-divider" />
+        <h6 class="collapse-header text-black">Production:</h6>
+        <a class="collapse-item" href="/materialcost">
+          <span>Material Cost</span>
+        </a>
+        <a class="collapse-item" href="/vendors">
+          <span>Vendor</span>
+        </a>
+
+        <hr class="sidebar-divider" />
+        <h6 class="collapse-header text-black">Sales & POS:</h6>
+        <a class="collapse-item" href="/payment">
+          <span>Payment</span>
         </a>
         <a class="collapse-item" href="/pos">
           <span>POS</span>
@@ -79,11 +86,18 @@
         <a class="collapse-item" href="/branch">
           <span>Branch</span>
         </a>
-        <a class="collapse-item" href="/vendors">
-          <span>Vendor</span>
+        <a class="collapse-item" href="/products">
+          <span>Products</span>
         </a>
-        <a class="collapse-item" href="/materialcost">
-          <span>Material Cost</span>
+        <a class="collapse-item" href="/category">
+          <span>Category</span>
+        </a>
+    
+
+        <hr class="sidebar-divider" />
+        <h6 class="collapse-header text-black">Authentication:</h6>
+        <a class="collapse-item" href="/users">
+          <span>Users</span>
         </a>
       </div>
     </div>
