--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -32,10 +32,10 @@
   
   --fw-700: '700';
 }
-.form-control:disabled{
+/* .form-control:disabled{
   background-color: white !important;
   border: none !important;
-}
+} */
 
 /* Font Styling */
 
